--- a/notebooks/naive_bayes.ipynb
+++ b/notebooks/naive_bayes.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys; sys.path.append('..')\n",
-    "from feature_extraction import bow_occurrences\n",
+    "from feature_extraction import bow_occurrences, bow_tfidf\n",
     "from preprocess_tweets import read_annotated_tweets, clean_tweets\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "max    3176.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -130,16 +130,16 @@
    ],
    "source": [
     "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(bow_occurrences(\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(bow_tfidf(\n",
     "                                                                    df['tweet_text'], (1,2)), \n",
-    "                                                                    df['label'], test_size=0.25, \n",
-    "                                                                    random_state=1\n",
+    "                                                                    df['label'], test_size=0.2, \n",
+    "                                                                    random_state=5\n",
     "                                                                    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "MultinomialNB()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4266666666666667\n"
+      "0.4166666666666667\n"
      ]
     }
    ],
