--- a/notebooks/naive_bayes.ipynb
+++ b/notebooks/naive_bayes.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to /home/anze/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys; sys.path.append('..')\n",
-    "from feature_extraction import bow_occurrences, bow_tfidf\n",
+    "from feature_extraction import bow_occurrences, bow_tfidf, bow_tfidf_df\n",
     "from preprocess_tweets import read_annotated_tweets, clean_tweets\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +108,7 @@
        "max    3176.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,16 +139,32 @@
    ],
    "source": [
     "\n",
+    "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(bow_tfidf(\n",
     "                                                                    df['tweet_text'], (1,2)), \n",
     "                                                                    df['label'], test_size=0.2, \n",
-    "                                                                    random_state=5\n",
+    "                                                                    \n",
     "                                                                    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = bow_tfidf_df(df['tweet_text'], (1,1))\n",
+    "#print(test)\n",
+    "\n",
+    "# Open a file with access mode 'a'\n",
+    "with open(\"./test.txt\", \"a\") as file_object:\n",
+    "    for column in test.columns:\n",
+    "        file_object.write(column + '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +173,7 @@
        "MultinomialNB()"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4166666666666667\n"
+      "0.5666666666666667\n"
      ]
     }
    ],
