added "username" to stopwords

--- a/notebooks/naive_bayes.ipynb
+++ b/notebooks/naive_bayes.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to /home/anze/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
    ],
@@ -125,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/anze/.local/lib/python3.8/site-packages/sklearn/feature_extraction/text.py:388: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['caleta', 'calvert', 'car', 'lewin', 'lkay'] not in stop_words.\n",
+      "/home/anze/.local/lib/python3.8/site-packages/sklearn/feature_extraction/text.py:388: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['caleta', 'calvert', 'car', 'lewin'] not in stop_words.\n",
       "  warnings.warn('Your stop_words may be inconsistent with '\n"
      ]
     }
@@ -151,20 +151,32 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/anze/.local/lib/python3.8/site-packages/sklearn/feature_extraction/text.py:388: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['caleta', 'calvert', 'car', 'lewin', 'lkay'] not in stop_words.\n",
+      "  warnings.warn('Your stop_words may be inconsistent with '\n"
+     ]
+    }
+   ],
    "source": [
-    "test = bow_tfidf_df(df['tweet_text'], (1,1))\n",
+    "test = bow_tfidf_df(df['tweet_text'], (1,2))\n",
     "#print(test)\n",
     "\n",
     "# Open a file with access mode 'a'\n",
     "with open(\"./test.txt\", \"a\") as file_object:\n",
+    "    file_object.seek(0)\n",
+    "    file_object.truncate()\n",
+    "\n",
     "    for column in test.columns:\n",
     "        file_object.write(column + '\\n')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +185,7 @@
        "MultinomialNB()"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5666666666666667\n"
+      "0.4\n"
      ]
     }
    ],
