--- a/notebooks/naive_bayes.ipynb
+++ b/notebooks/naive_bayes.ipynb
@@ -2,121 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys; sys.path.append('..')\n",
     "from feature_extraction import bow_occurrences, bow_tfidf, bow_tfidf_df\n",
     "from preprocess_tweets import read_annotated_tweets, clean_tweets\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, KFold, ShuffleSplit, cross_val_score\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "import os"
+    "from sklearn import metrics\n",
+    "import os\n",
+    "from numpy import mean, std\n",
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['id', 'tweet_text', 'label'], dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>298.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>3016.671141</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>92.729972</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>2859.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2935.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>3015.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>3096.750000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>3176.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                id\n",
-       "count   298.000000\n",
-       "mean   3016.671141\n",
-       "std      92.729972\n",
-       "min    2859.000000\n",
-       "25%    2935.250000\n",
-       "50%    3015.500000\n",
-       "75%    3096.750000\n",
-       "max    3176.000000"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = read_annotated_tweets(os.path.abspath('../data/classified/england_italy_tweets_classified1.csv'))\n",
     "clean_tweets(df)\n",
-    "\n",
-    "\n",
-    "print(df.columns)\n",
-    "\n",
-    "df.describe()\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,11 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' test = bow_tfidf_df(df[\\'tweet_text\\'], (1,1))\\n#print(test)\\n\\n# Open a file with access mode \\'a\\'\\nwith open(\"./test.txt\", \"a\") as file_object:\\n    file_object.seek(0)\\n    file_object.truncate()\\n\\n    for column in test.columns:\\n        file_object.write(column + \\'\\n\\')\\n '"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test = bow_tfidf_df(df['tweet_text'], (1,1))\n",
+    "\"\"\" test = bow_tfidf_df(df['tweet_text'], (1,1))\n",
     "#print(test)\n",
     "\n",
     "# Open a file with access mode 'a'\n",
@@ -144,47 +69,66 @@
     "    file_object.truncate()\n",
     "\n",
     "    for column in test.columns:\n",
-    "        file_object.write(column + '\\n')\n"
+    "        file_object.write(column + '\\n')\n",
+    " \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MultinomialNB()"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mnb = MultinomialNB()\n",
-    "mnb.fit(X_train, Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.55\n"
+      "[0.375      0.41666667 0.54166667 0.4375     0.41666667 0.54166667\n",
+      " 0.5625     0.5        0.5        0.35416667]\n",
+      "0.4645833333333333\n",
+      "0.07037227397522723\n"
      ]
     }
    ],
    "source": [
-    "from sklearn import metrics\n",
+    "k_fold = KFold(n_splits=10, random_state=1, shuffle=True)\n",
+    "rs = ShuffleSplit(n_splits=10, test_size=0.2, random_state=1)\n",
     "\n",
-    "predicted = mnb.predict(X_test)\n",
+    "mb_model = MultinomialNB()\n",
+    "\n",
+    "scores = cross_val_score(mb_model, X_train, Y_train, cv=rs)\n",
+    "\n",
+    "print(scores)\n",
+    "print(mean(scores))\n",
+    "print(std(scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "mb_model = MultinomialNB()\n",
+    "\n",
+    "mb_model.fit(X_train, Y_train)\n",
+    "\n",
+    "predicted = mb_model.predict(X_test)\n",
+    "\n",
     "acc_score = metrics.accuracy_score(predicted, Y_test)\n",
     "\n",
     "print(acc_score)"
