figs, match sentiment

--- a/notebooks/naive_bayes.ipynb
+++ b/notebooks/naive_bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,18 +20,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69\n",
+      "92\n",
+      "137\n"
+     ]
+    }
+   ],
    "source": [
     "df = read_annotated_tweets(os.path.abspath('../data/classified/england_italy_tweets_classified1.csv'))\n",
     "clean_tweets(df)\n",
+    "\n",
+    "labels = df['label'].to_list()\n",
+    "\n",
+    "positives = list(filter(lambda x: str(x) == 'Positive', labels))\n",
+    "negatives = list(filter(lambda x: str(x) == 'Negative', labels))\n",
+    "neutrals = list(filter(lambda x: str(x) == 'Neutral', labels))\n",
+    "\n",
+    "print(len(positives))\n",
+    "print(len(negatives))\n",
+    "print(len(neutrals))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +131,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Neutral' 'Neutral' 'Neutral' 'Negative' 'Neutral' 'Positive' 'Neutral'\n",
+      " 'Neutral' 'Negative' 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Neutral'\n",
+      " 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Negative'\n",
+      " 'Neutral' 'Neutral' 'Negative' 'Neutral' 'Neutral' 'Neutral' 'Neutral'\n",
+      " 'Neutral' 'Neutral' 'Neutral' 'Negative' 'Neutral' 'Neutral' 'Neutral'\n",
+      " 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Neutral'\n",
+      " 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Neutral' 'Neutral'\n",
+      " 'Neutral' 'Neutral' 'Neutral' 'Positive' 'Neutral' 'Neutral' 'Neutral'\n",
+      " 'Neutral' 'Neutral' 'Neutral' 'Neutral']\n",
       "0.6\n",
       "0.4702380952380952\n",
       "0.7886792452830189\n",
@@ -124,6 +153,7 @@
     "mb_model.fit(X_train, Y_train)\n",
     "\n",
     "predicted = mb_model.predict(X_test)\n",
+    "print(predicted)\n",
     "\n",
     "acc_score = metrics.accuracy_score(predicted, Y_test)\n",
     "prec_score = metrics.precision_score(predicted, Y_test, average='macro')\n",
