--- a/notebooks/svm.ipynb
+++ b/notebooks/svm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,15 +29,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (1, 373)\t0.3779644730092272\n",
+      "  (1, 381)\t0.3779644730092272\n",
+      "  (1, 957)\t0.3779644730092272\n",
+      "  (1, 407)\t0.3779644730092272\n",
+      "  (1, 415)\t0.3779644730092272\n",
+      "  (1, 382)\t0.3779644730092272\n",
+      "  (1, 962)\t0.3779644730092272\n",
+      "  (2, 861)\t0.4472135954999579\n",
+      "  (2, 981)\t0.4472135954999579\n",
+      "  (2, 671)\t0.4472135954999579\n",
+      "  (2, 612)\t0.4472135954999579\n",
+      "  (2, 685)\t0.4472135954999579\n",
+      "  (3, 863)\t0.7071067811865476\n",
+      "  (3, 1099)\t0.7071067811865476\n",
+      "  (4, 974)\t0.7071067811865476\n",
+      "  (4, 872)\t0.7071067811865476\n",
+      "  (6, 445)\t0.7071067811865476\n",
+      "  (6, 772)\t0.7071067811865476\n",
+      "  (7, 413)\t0.408248290463863\n",
+      "  (7, 1064)\t0.408248290463863\n",
+      "  (7, 345)\t0.408248290463863\n",
+      "  (7, 515)\t0.408248290463863\n",
+      "  (7, 352)\t0.408248290463863\n",
+      "  (7, 732)\t0.408248290463863\n",
+      "  (8, 1094)\t0.5773502691896257\n",
+      "  :\t:\n",
+      "  (53, 422)\t0.2886751345948129\n",
+      "  (53, 546)\t0.2886751345948129\n",
+      "  (53, 647)\t0.2886751345948129\n",
+      "  (53, 1072)\t0.2886751345948129\n",
+      "  (53, 10)\t0.2886751345948129\n",
+      "  (53, 936)\t0.2886751345948129\n",
+      "  (53, 648)\t0.2886751345948129\n",
+      "  (53, 190)\t0.2886751345948129\n",
+      "  (54, 1086)\t0.5\n",
+      "  (54, 312)\t0.5\n",
+      "  (54, 945)\t0.5\n",
+      "  (54, 950)\t0.5\n",
+      "  (55, 812)\t0.3779644730092272\n",
+      "  (55, 603)\t0.3779644730092272\n",
+      "  (55, 110)\t0.3779644730092272\n",
+      "  (55, 755)\t0.3779644730092272\n",
+      "  (55, 73)\t0.3779644730092272\n",
+      "  (55, 637)\t0.3779644730092272\n",
+      "  (55, 67)\t0.3779644730092272\n",
+      "  (56, 152)\t1.0\n",
+      "  (57, 366)\t1.0\n",
+      "  (58, 818)\t0.7071067811865476\n",
+      "  (58, 384)\t0.7071067811865476\n",
+      "  (59, 84)\t0.7071067811865476\n",
+      "  (59, 428)\t0.7071067811865476\n",
+      "(60, 1105)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(bow_tfidf(\n",
     "                                                                    df['tweet_text'], (2,2)), \n",
     "                                                                    df['label'], test_size=0.2, \n",
     "                                                                    random_state=6\n",
-    "                                                                    )\n"
+    "                                                                    )\n",
+    "\n",
+    "print(X_test)\n",
+    "print(X_test.shape)\n"
    ]
   },
   {
@@ -97,7 +159,6 @@
     "svm_model = svm.SVC(kernel='linear')\n",
     "\n",
     "svm_model.fit(X_train, Y_train)\n",
-    "\n",
     "\n",
     "predicted = svm_model.predict(X_test)\n",
     "acc_score = metrics.accuracy_score(predicted, Y_test)\n",
